--- a/netlify.toml
+++ b/netlify.toml
@@ -1,7 +1,7 @@
 [[edge_functions]]
 path = "/dialogflow/fulfillment"
-function = "dialogflow/fulfillment"
+function = "dialogflow-fulfillment"
 
 [[edge_functions]]
 path = "/dialogflow/server"
-function = "dialogflow/server"
+function = "dialogflow-server"
