--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,6 @@
   "deno.enablePaths": [
     "netlify/edge-functions"
   ],
-  "deno.unstable": true,
-  "deno.importMap": ".netlify/edge-functions-import-map.json"
+  "deno.importMap": "import-map.json",
+  "deno.unstable": true
 }
